--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,7 +1,18 @@
 .container {
-  width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid tomato; */
+  outline: 2px solid tomato;
+
+  @include media-screen(mobile) {
+    width: 480px;
+  }
+
+  @include media-screen(tablet) {
+    width: 768px;
+  }
+
+  @include media-screen(desktop) {
+    width: 1200px;
+  }
 }
