--- a/scss/layouts/_benefits.scss
+++ b/scss/layouts/_benefits.scss
@@ -2,7 +2,19 @@
 
 .benefits__list {
   display: flex;
-  column-gap: 30px;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.benefits__item {
+  @include media-screen(tablet) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @include media-screen(desktop) {
+    width: calc((100% - 90px) / 4);
+    flex-wrap: nowrap;
+  }
 }
 
 .benefits__pic {
@@ -10,7 +22,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--lightest-gray-color);
   border-radius: 4px;
