--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -7,18 +7,55 @@
 
 .footer__container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+
+  @include media-screen(tablet) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+    column-gap: 165px;
+    row-gap: 60px;
+  }
+
+  @include media-screen(desktop) {
+    flex-wrap: nowrap;
+    gap: 0;
+    justify-content: flex-start;
+  }
 }
 
 .footer-nav {
-  margin-right: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @include media-screen(desktop) {
+    width: 231px;
+    margin-right: 70px;
+  }
 }
 
 .footer__logo {
-  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 20px;
 
   color: var(--primary-white-color);
+
+  @include media-screen(desktop) {
+    margin-left: 0;
+  }
+}
+
+.footer-address__list {
+  text-align: center;
+
+  @include media-screen(desktop) {
+    text-align: start;
+  }
 }
 
 .footer-address {
@@ -28,7 +65,7 @@
 
   &__item {
     display: block;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
   }
 
   &__map {
@@ -55,15 +92,24 @@
 /* follow list */
 .footer-subtitle {
   margin-bottom: 20px;
+  text-align: center;
 
   font-weight: 700;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-white-color);
+
+  @include media-screen(desktop) {
+    text-align: start;
+  }
 }
 
 .footer-follow {
-  margin-right: 93px;
+  text-align: center;
+
+  @include media-screen(desktop) {
+    margin-right: 93px;
+  }
 
   &__list {
     display: flex;
@@ -101,18 +147,33 @@
 }
 
 .footer-subscribe {
+  width: 100%;
   display: flex;
   flex-direction: column;
 
+  @include media-screen(tablet) {
+    width: 450px;
+  }
+
+  @include media-screen(desktop) {
+    width: auto;
+  }
+
   &__input-field {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 12px;
+    gap: 20px;
+
+    @include media-screen(desktop) {
+      flex-direction: row;
+      gap: 12px;
+    }
   }
 
   &__input {
     padding: 15px 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
 
     color: var(--primary-white-color);
@@ -120,6 +181,10 @@
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: rgba(33, 150, 243, 0);
+
+    @include media-screen(desktop) {
+      width: 358px;
+    }
   }
 }
 
