--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -17,17 +17,27 @@
   background-size: cover;
 
   &__title {
-    width: 696px;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     text-align: center;
     color: var(--primary-white-color);
+  }
+
+  @include media-screen(desktop) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
+.hero__title {
+  @include media-screen(tablet) {
+    width: 360px;
   }
 }
