--- a/scss/layouts/_works.scss
+++ b/scss/layouts/_works.scss
@@ -1,5 +1,6 @@
 /* what we do */
 .works {
+  display: none;
   padding-top: 0;
 
   &__title {
@@ -39,5 +40,9 @@
     text-transform: uppercase;
     text-align: center;
     color: var(--primary-white-color);
+  }
+
+  @include media-screen(desktop) {
+    display: block;
   }
 }
