--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin media-screen($type) {
   $modile: 480px;
   $tablet: 768px;
-  $desktop: 1600px;
+  $desktop: 1200px;
 
   @if $type == "mobile-only" {
     @media screen and (max-width: #{$tablet - 0.02}) {
@@ -16,7 +16,7 @@
   }
 
   @if $type == "tablet-only" {
-    @media screen and (max-width: #{$desktop - 0.02}) {
+    @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
       @content;
     }
   }
