--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/logo";
 @import "./components/buttons";
 @import "./components/modal";
+@import "./components/mobile-menu";
 
 // layouts
 @import "./layouts/header";
