--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ ul {
 
 /* buttons */
 .button {
-  padding: 10px 32px;
+  padding: 10px 24px;
   min-width: 200px;
   border-width: 0;
   border-radius: 4px;
@@ -131,6 +131,12 @@ ul {
   font-family: inherit;
   color: var(--primary-white-color);
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .button {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 }
 .button--primary {
   font-weight: 700;
@@ -180,10 +186,10 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px 0 15px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -198,28 +204,39 @@ ul {
 }
 
 .modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
+  position: relative;
+  width: 100%;
   padding: 40px;
-  width: 528px;
-  height: 581px;
   border-radius: 4px;
   background: var(--primary-white-color);
   -webkit-box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    max-width: 450px;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 .modal__title {
   margin-bottom: 12px;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 0.03em;
+  line-height: 1.5;
   text-align: center;
   color: var(--secondary-text-color);
 }
@@ -315,29 +332,46 @@ ul {
   outline: transparent;
 }
 .modal-form__input-comment::-webkit-input-placeholder {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-form__input-comment::-moz-placeholder {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-form__input-comment:-ms-input-placeholder {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-form__input-comment::-ms-input-placeholder {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 .modal-form__input-comment::placeholder {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+@media screen and (min-width: 1200px) {
+  .modal-form__input-comment::-webkit-input-placeholder {
+    font-size: 12px;
+  }
+  .modal-form__input-comment::-moz-placeholder {
+    font-size: 12px;
+  }
+  .modal-form__input-comment:-ms-input-placeholder {
+    font-size: 12px;
+  }
+  .modal-form__input-comment::-ms-input-placeholder {
+    font-size: 12px;
+  }
+  .modal-form__input-comment::placeholder {
+    font-size: 12px;
+  }
 }
 .modal-form__input-comment:focus {
   border-color: var(--accent-color);
@@ -393,8 +427,14 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   gap: 8px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .checkbox__label {
+    font-size: 14px;
+  }
 }
 
 .policy-link {
@@ -415,12 +455,16 @@ ul {
   border-bottom: 1px solid #ececec;
 }
 .header__container {
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .navigation {
@@ -430,19 +474,23 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: auto;
 }
 
 .header-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 50px;
-     -moz-column-gap: 50px;
-          column-gap: 50px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .header-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 50px;
+       -moz-column-gap: 50px;
+            column-gap: 50px;
+  }
 }
 
 .header-nav__link {
@@ -477,13 +525,18 @@ ul {
 
 /* header contacts */
 .header-contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .header-contacts__item {
   display: -webkit-box;
