--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,6 +1,6 @@
 /* buttons */
 .button {
-  padding: 10px 32px;
+  padding: 10px 24px;
   min-width: 200px;
   border-width: 0;
   border-radius: 4px;
@@ -9,6 +9,11 @@
   font-family: inherit;
   color: var(--primary-white-color);
   text-align: center;
+
+  @include media-screen(desktop) {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 
   &--primary {
     font-weight: 700;
