--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -5,11 +5,13 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px 0 15px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  overflow-y: scroll;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  //   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -23,21 +25,28 @@
 }
 
 .modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
+  position: relative;
+  width: 100%;
   padding: 40px;
 
-  width: 528px;
-  height: 581px;
+  @include media-screen(tablet) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    max-width: 450px;
+
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  @include media-screen(desktop) {
+    max-width: 528px;
+  }
 
   border-radius: 4px;
   background: var(--primary-white-color);
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
     0 1px 3px 0 rgba(0, 0, 0, 0.12);
-
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &__title {
     margin-bottom: 12px;
@@ -45,6 +54,7 @@
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 0.03em;
+    line-height: 1.5;
     text-align: center;
     color: var(--secondary-text-color);
   }
@@ -148,9 +158,13 @@
   outline: transparent;
 
   &::placeholder {
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
+
+    @include media-screen(desktop) {
+      font-size: 12px;
+    }
   }
 
   &:focus {
@@ -196,8 +210,13 @@
   align-items: center;
   gap: 8px;
 
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  @include media-screen(desktop) {
+    font-size: 14px;
+  }
 }
 
 .policy-link {
