--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -10,11 +10,27 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero-bg.jpg);
+    url(../images/hero-bg-mob.jpg);
   max-width: 1600px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @include media-screen(tablet) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-tab.jpg);
+  }
+
+  @include media-screen(desktop) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-bg-desk.jpg);
+  }
 
   &__title {
     margin-bottom: 30px;
