--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,4 +1,5 @@
-.menu-toggle {
+// mobile menu
+.mob-menu__btn--open {
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -10,27 +11,116 @@
   }
 }
 
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding: 48px 40px;
+  background-color: var(--primary-white-color);
+  overflow-y: scroll;
+}
+
+.mob-menu__btn--close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  border: none;
+}
+
 .icon-close {
-  display: none;
+}
+.mob-menu__nav {
+  margin-bottom: 48px;
+}
+.mob-menu__item {
 }
 
-.nav-button.is-open .icon-close {
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
   display: block;
+
+  font-weight: 500;
+  font-size: 40px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
 }
 
-.nav-button.is-open .icon-menu {
-  display: none;
+.mob-menu__link--current {
+  color: var(--accent-color);
 }
 
-.mobile-menu {
-  display: none;
+.mob-menu__contacts {
+  margin-bottom: 64px;
+}
 
-  &.is-open {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #ffffff;
-    padding: 40px 48px;
+.mob-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contacts__tel {
+  font-weight: 500;
+  font-size: 34px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+
+  @media screen and (max-width: 479px) {
+    font-size: 24px;
   }
+}
+
+.mob-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.02em;
+}
+
+.mob-menu__socials {
+  display: flex;
+}
+
+.mob-socials__link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+
+  @media screen and (max-width: 479px) {
+    font-size: 12px;
+  }
+}
+
+.mob-socials__item {
+  position: relative;
+}
+
+.mob-socials__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.mob-socials__item:not(:last-child).mob-socials__item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  width: 1px;
+  height: 100%;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+.no-scroll {
+  overflow: hidden;
 }
