--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -23,6 +23,21 @@
   padding: 48px 40px;
   background-color: var(--primary-white-color);
   overflow-y: scroll;
+
+  opacity: 1;
+
+  transform: translateX(0);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include media-screen(tablet) {
+    display: none;
+  }
+}
+
+.mob-menu.visually-hidden {
+  opacity: 0;
+  transform: translateX(100%);
 }
 
 .mob-menu__btn--close {
