--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -10,8 +10,8 @@
   opacity: 1;
   overflow-y: scroll;
 
-  // transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  //   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -209,6 +209,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  flex-wrap: wrap;
 
   font-size: 12px;
   line-height: 1.71;
