--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -6,6 +6,11 @@
   padding-bottom: 200px;
   text-align: center;
   background: #c4c4c4;
+  max-width: 1600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -16,11 +21,6 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-bg-mob.webp);
-
-  max-width: 1600px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 
   @include media-screen(retina) {
     background-image: linear-gradient(
@@ -35,19 +35,18 @@
       url(../images/hero-bg-mob-2x.webp);
   }
 
-  // tablet
-
   @include media-screen(tablet) {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-bg-tab.jpg);
+
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/hero-bg-tab.webp);
+      -webkit-image-set(url(../images/hero-bg-tab.webp) 1x);
 
     @include media-screen(retina) {
       background-image: linear-gradient(
@@ -60,11 +59,9 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/hero-bg-tab-2x.webp);
+        -webkit-image-set(url(../images/hero-bg-tab-2x.webp) 2x);
     }
   }
-
-  // desktop
 
   @include media-screen(desktop) {
     background-image: linear-gradient(
@@ -77,7 +74,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/hero-bg-desk.webp);
+      -webkit-image-set(url(../images/hero-bg-desk.webp) 1x);
 
     @include media-screen(retina) {
       background-image: linear-gradient(
@@ -90,7 +87,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/hero-bg-desk-2x.webp);
+        -webkit-image-set(url(../images/hero-bg-desk-2x.webp) 2x);
     }
   }
 
