--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
+  // outline: 2px solid tomato;
 
   @include media-screen(mobile) {
     width: 480px;
