--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 100;
 
   padding: 48px 40px;
   background-color: var(--primary-white-color);
