--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -56,8 +56,8 @@
 .cards__thumb {
   position: relative;
   overflow: hidden;
-  width: 450px;
-  height: 294px;
+  // width: 450px;
+  // height: 294px;
 
   @include media-screen(tablet) {
     width: 354px;
