--- a/css/main.css
+++ b/css/main.css
@@ -115,8 +115,6 @@ img {
 /* logo */
 .logo {
   display: block;
-  padding-top: 16px;
-  padding-bottom: 16px;
   font-family: var(--second-font-family);
   font-weight: 700;
   font-size: 26px;
@@ -124,20 +122,25 @@ img {
   text-decoration: none;
   color: var(--primary-black-color);
 }
+.logo__text--accent {
+  color: var(--accent-color);
+}
+
+.logo__header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 @media screen and (min-width: 768px) {
-  .logo {
+  .logo__header {
     margin-right: 87px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .logo {
+  .logo__header {
     padding-top: 24px;
     padding-bottom: 25px;
     margin-right: 92px;
   }
-}
-.logo__text--accent {
-  color: var(--accent-color);
 }
 
 /* buttons */
@@ -205,12 +208,17 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 93px 15px 0 15px;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   overflow-y: scroll;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -220,36 +228,52 @@ img {
 }
 
 .backdrop.is-hidden .modal {
-  -webkit-transform: translate(-50%, -50%) scale(1.1);
-          transform: translate(-50%, -50%) scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+@media screen and (min-width: 768px) {
+  .backdrop.is-hidden .modal {
+    -webkit-transform: translate(-50%, -50%) scale(1.1);
+            transform: translate(-50%, -50%) scale(1.1);
+  }
 }
 
 .modal {
   position: relative;
+  top: 93px;
   width: 100%;
   padding: 40px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   background: var(--primary-white-color);
   -webkit-box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+}
+@media screen and (max-width: 767.98px) {
+  .modal {
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .modal {
     position: absolute;
     left: 50%;
     top: 50%;
-    max-width: 450px;
-    -webkit-transform: translate(-50%, -50%) scale(1);
-            transform: translate(-50%, -50%) scale(1);
-    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 450px;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    max-width: 528px;
+    width: 528px;
   }
 }
 .modal__title {
@@ -283,8 +307,6 @@ img {
   background-color: var(--primary-white-color);
   border-color: rgba(0, 0, 0, 0.1);
   color: var(--primary-black-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover {
   color: var(--accent-color);
@@ -410,19 +432,27 @@ img {
 }
 
 .checkbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 8px;
   width: 16px;
   height: 15px;
   border: 2px solid var(--secondary-text-color);
   fill: transparent;
+}
+@media screen and (min-width: 1200px) {
+  .checkbox {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 .checkbox__icon {
   width: 11px;
@@ -441,21 +471,20 @@ img {
 }
 
 .checkbox__label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 8px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 @media screen and (min-width: 1200px) {
   .checkbox__label {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     font-size: 14px;
   }
 }
@@ -466,26 +495,16 @@ img {
           text-decoration-skip-ink: none;
   color: var(--accent-color);
 }
+@media screen and (min-width: 1200px) {
+  .policy-link {
+    margin-left: 4px;
+  }
+}
 
 .modal-button__submit {
   display: block;
   margin-right: auto;
   margin-left: auto;
-}
-
-.mob-menu__btn--open {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  background-color: transparent;
-}
-@media screen and (min-width: 768px) {
-  .mob-menu__btn--open {
-    display: none;
-  }
 }
 
 .mob-menu {
@@ -521,10 +540,43 @@ img {
   }
 }
 
+.icon-menu {
+  fill: currentColor;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu__btn {
+  cursor: pointer;
+}
+
+.mob-menu__btn:hover .icon-menu {
+  fill: var(--accent-color);
+}
+
 .mob-menu.visually-hidden {
   opacity: 0;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
+}
+
+.mob-menu__btn--open {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu__btn--open {
+    display: none;
+  }
 }
 
 .mob-menu__btn--close {
@@ -796,8 +848,8 @@ img {
 .hero {
   margin-right: auto;
   margin-left: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background: #c4c4c4;
   max-width: 1600px;
@@ -835,6 +887,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-desk.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desk.jpg);
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero-bg-desk.webp) 1x);
@@ -861,16 +915,17 @@ img {
   text-align: center;
   color: var(--primary-white-color);
 }
-@media screen and (min-width: 1200px) {
-  .hero {
-    font-size: 44px;
-    line-height: 1.36;
-  }
-}
 
 @media screen and (min-width: 768px) {
   .hero__title {
     width: 360px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
   }
 }
 
@@ -921,10 +976,16 @@ img {
 
 .benefits__subtitle {
   margin-bottom: 10px;
+  text-align: center;
   font-size: 14px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 768px) {
+  .benefits__subtitle {
+    text-align: start;
+  }
 }
 
 .benefits__content {
@@ -1514,6 +1575,7 @@ img {
         flex-wrap: wrap;
   }
 }
+
 @media screen and (min-width: 768px) {
   .cards__item {
     width: calc((100% - 30px) / 2);
@@ -1553,6 +1615,18 @@ img {
   -webkit-box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 }
+@media screen and (min-width: 768px) {
+  .cards__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+}
 
 .cards__link:hover .cards__overlay {
   -webkit-transform: translatey(0);
@@ -1583,10 +1657,15 @@ img {
 }
 
 .cards__overlay-content {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
+}
+@media screen and (min-width: 370px) {
+  .cards__overlay-content {
+    font-size: 18px;
+  }
 }
 
 .cards__pic {
@@ -1601,6 +1680,13 @@ img {
   border-top: 0;
   padding: 20px 24px;
 }
+@media screen and (min-width: 768px) {
+  .cards__content {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
 
 .cards__title {
   margin-bottom: 4px;
@@ -1608,16 +1694,6 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
-}
-@media screen and (min-width: 768px) {
-  .cards__title {
-    font-size: 17px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .cards__title {
-    font-size: 18px;
-  }
 }
 
 .cards__subtitle {
