--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,18 +1,6 @@
 /* logo */
 .logo {
   display: block;
-  padding-top: 16px;
-  padding-bottom: 16px;
-
-  @include media-screen(tablet) {
-    margin-right: 87px;
-  }
-
-  @include media-screen(desktop) {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    margin-right: 92px;
-  }
 
   font-family: var(--second-font-family);
   font-weight: 700;
@@ -24,5 +12,20 @@
 
   &__text--accent {
     color: var(--accent-color);
+  }
+}
+
+.logo__header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+
+  @include media-screen(tablet) {
+    margin-right: 87px;
+  }
+
+  @include media-screen(desktop) {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 92px;
   }
 }
