--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,16 +1,4 @@
 // mobile menu
-.mob-menu__btn--open {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  background-color: transparent;
-
-  @include media-screen(tablet) {
-    display: none;
-  }
-}
-
 .mob-menu {
   position: fixed;
   top: 0;
@@ -36,9 +24,37 @@
   }
 }
 
+.icon-menu {
+  fill: currentColor;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu__btn {
+  cursor: pointer;
+}
+
+.mob-menu__btn:hover .icon-menu {
+  fill: var(--accent-color);
+}
+
 .mob-menu.visually-hidden {
   opacity: 0;
   transform: translateX(100%);
+}
+
+.mob-menu__btn--open {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+
+  @include media-screen(tablet) {
+    display: none;
+  }
 }
 
 .mob-menu__btn--close {
